retrieving channels from chatterino settings

--- a/ColorChanger/Settings.json
+++ b/ColorChanger/Settings.json
@@ -2,7 +2,7 @@
   "AccountSettings": {
     "Username": "",
     "OAuthToken": "",
-    "Channels": []
+    "Channels": null
   },
   "Colors": [
     "#FF0000",
