--- a/ColorChanger/Settings.json
+++ b/ColorChanger/Settings.json
@@ -6,52 +6,22 @@
   },
   "Colors": [
     "#FF0000",
-    "#FF0020",
-    "#FF0040",
-    "#FF0060",
-    "#FF0080",
-    "#FF00A0",
-    "#FF00C0",
-    "#FF00E0",
-    "#FF00FF",
-    "#E000FF",
-    "#C000FF",
-    "#A000FF",
-    "#8000FF",
-    "#6000FF",
-    "#40FF00",
-    "#2000FF",
-    "#0000FF",
-    "#0020FF",
-    "#0040FF",
-    "#0060FF",
-    "#0080FF",
-    "#00A0FF",
-    "#00C0FF",
-    "#00E0FF",
-    "#00FFFF",
-    "#00FFE0",
-    "#00FFC0",
-    "#00FFA0",
-    "#00FF80",
-    "#00FF60",
-    "#00FF40",
-    "#00FF20",
-    "#00FF00",
-    "#20FF00",
-    "#40FF00",
-    "#60FF00",
-    "#80FF00",
-    "#A0FF00",
-    "#C0FF00",
-    "#E0FF00",
-    "#FFFF00",
-    "#FFE000",
-    "#FFC000",
-    "#FFA000",
-    "#FF8000",
-    "#FF6000",
-    "#FF4000",
-    "#FF2000"
+    "#FF005A",
+    "#FF00B4",
+    "#F000FF",
+    "#9600FF",
+    "#3C00FF",
+    "#001EFF",
+    "#0078FF",
+    "#00CDFF",
+    "#00FFD7",
+    "#00FF7D",
+    "#00FF23",
+    "#37FF00",
+    "#91FF00",
+    "#EBFF00",
+    "#FFBE00",
+    "#FF6400",
+    "#FF0F00"
   ]
 }
