added more json settings

--- a/ColorChanger/AppSettings.json
+++ b/ColorChanger/AppSettings.json
@@ -1,5 +1,7 @@
 {
-  "AccountSettings": {
+  "AutoConnect": false,
+  "StartWithWindows": false,
+  "Account": {
     "Username": "",
     "OAuthToken": "",
     "Channels": null
